Remember if the notifications are disabled for this tab or not

BUG:96707

svn path=/trunk/kdeextragear-2/konversation/; revision=402752