konversation/server.h
@@ -128,7 +128,7 @@ class Server : public QObject
     InputFilter* getInputFilter();
     Konversation::OutputFilter* getOutputFilter();
 
-    void joinChannel(const QString& name, const QString& hostmask, const QString& key);
+    void joinChannel(const QString& name, const QString& hostmask);
     void removeChannel(Channel* channel);
     void appendServerMessageToChannel(const QString& channel, const QString& type, const QString& message);
     void appendCommandMessageToChannel(const QString& channel, const QString& command, const QString& message);
